--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ attrs==21.2.0
 autopep8==1.5.7
 backcall==0.2.0
 backports.entry-points-selectable==1.1.0
-backports.zoneinfo==0.2.1
 bandit==1.7.0
 bleach==4.1.0
+boto3==1.20.24
+botocore==1.23.24
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
@@ -22,6 +23,7 @@ Django==3.2
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.13.0
+django-storages==1.12.3
 docutils==0.17.1
 entrypoints==0.3
 filelock==3.0.12
@@ -40,6 +42,7 @@ isort==5.9.3
 jedi==0.18.0
 jeepney==0.7.1
 Jinja2==3.0.1
+jmespath==0.10.0
 jsonschema==3.2.0
 jupyter-client==7.0.2
 jupyter-core==4.7.1
@@ -94,6 +97,7 @@ requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 rfc3986==1.5.0
 rope==0.19.0
+s3transfer==0.5.0
 SecretStorage==3.3.1
 Send2Trash==1.8.0
 six==1.16.0
